apex/grammar.js
    source_file: ($) => repeat($.declaration),

    // =========================================================================
    // DECLARATIONS
    // =========================================================================

    /**
     * A declaration is any top-level or nested construct that defines
     * a named entity: class, interface, enum, or trigger.
     */
    class_declaration: ($) => seq(
      optional($.modifiers),
      ci("class"),
      field("name", $.identifier),
      optional($.superclass),
      optional($.interfaces),
      field("body", $.class_body)
    ),

    /**
     * Superclass clause — extends keyword.
     * Example: extends TriggerHandler
     */
    class_body: ($) => seq(
      "{",
      repeat($._class_body_declaration),
      "}"
    ),

    /**
     * Items that can appear inside a class body.
     */
    _class_body_declaration: ($) => choice(
      $.field_declaration,
      $.method_declaration,
      $.constructor_declaration,
      $.property_declaration,
      $.class_declaration,      // Inner classes
      $.interface_declaration,  // Inner interfaces
      $.enum_declaration,       // Inner enums
      ";",  // Empty statement (allowed in class body)
    ),

    // --- Method, Constructor, Property ---
    method_declaration: ($) => seq(
      optional($.modifiers),
      field("type", $._type),
      field("name", $.identifier),
      field("parameters", $.formal_parameters),
      choice(field("body", $.block), ";")  // abstract methods have no body
    ),

    formal_parameters: ($) => seq("(", optional(commaJoined1($.formal_parameter)), ")"),
    modifiers: ($) => repeat1(choice($.annotation, $.modifier)),

    modifier: ($) => choice(
      // Access modifiers
      ci("public"),
      ci("private"),
      ci("protected"),
      ci("global"),        // Apex-specific: visible across namespaces
      // Sharing modifiers (Apex-specific: control record-level security)
      ci("with sharing"),
      ci("without sharing"),
      ci("inherited sharing"),
      // Other modifiers
      ci("static"),
      ci("final"),
      ci("override"),
      ci("virtual"),       // Apex-specific: class/method can be extended/overridden
      ci("abstract"),
      ci("transient"),     // Apex-specific: field not serialized in Visualforce
      ci("testMethod"),    // Deprecated: use @IsTest annotation instead
    ),

    // =========================================================================
    // TYPE SYSTEM
    // =========================================================================

    /**
     * Type reference — used in variable declarations, method signatures, etc.
     * This is a hidden rule; one of its alternatives appears in the tree.
     */
    _type: ($) => choice(
      $.type_identifier,
      $.generic_type,
      $.array_type,
      $.void_type,
    ),

    /**
     * Type identifier — a simple or dotted type name.
     *
     * Examples:
     *   String              (primitive type)
     *   Account             (sObject type)
     *   Database.Batchable  (namespaced type)
     *   My_Custom__c        (custom sObject)
     */
    type_identifier: ($) => choice(
      $.identifier,
      $.scoped_type_identifier,
    ),

    /**
     * Scoped type — a dot-separated type path.
     *
     * Examples:
     *   Database.Batchable
     *   System.Label
     *   Schema.SObjectField
     */
    generic_type: ($) => seq(
      $.type_identifier,
      $.type_arguments
    ),

    type_arguments: ($) => seq(
      "<", commaJoined1($._type), ">"
    ),

    /**
     * Array type — Apex supports Java-style array syntax.
     *
     * Examples:
     *   String[]
     *   Account[]
     *   Integer[]
     *
     * Note: In practice, List<String> is preferred over String[] in Apex,
     * but both syntaxes are valid and must be parsed.
     */
    void_type: ($) => ci("void"),

    // =========================================================================
    // FIELD DECLARATIONS
    // =========================================================================

    /**
     * Field declaration — a variable defined at the class level.
     *
     * Examples:
     *   private String name;
     *   public static Integer count = 0;
     *   private final Boolean IS_ACTIVE = true;
     *   List<Account> accounts = new List<Account>();
     */
    variable_declarator: ($) => seq(
      field("name", $.identifier),
      optional(seq("=", field("value", $._variable_initializer)))
    ),

    _variable_initializer: ($) => $.expression,

    // =========================================================================
    // EXPRESSIONS
    // =========================================================================

    /**
     * Expression supertype — encompasses all possible expressions.
     * This will be expanded significantly in Steps 5-6.
     */
    _lhs_expression: ($) => choice(
      $.identifier,
      $.field_access,
      $.array_access
    ),

    assignment_expression: ($) => prec.right(PREC.ASSIGN, seq(
      field("left", $._lhs_expression),
      choice("=", "+=", "-=", "*=", "/=", "%=", "&=", "^=", "|=", "<<=", ">>=", ">>>="),
      field("right", $.expression)
    )),

    binary_expression: ($) => choice(
      ...[
        ["||", PREC.OR],
        ["&&", PREC.AND],
        ["|", PREC.BIT_OR],
        ["^", PREC.BIT_XOR],
        ["&", PREC.BIT_AND],
        ["==", PREC.EQUALITY],
        ["!=", PREC.EQUALITY],
        ["<>", PREC.EQUALITY],
        ["===", PREC.EQUALITY],
        ["!==", PREC.EQUALITY],
        ["<", PREC.REL],
        ["<=", PREC.REL],
        [">", PREC.REL],
        [">=", PREC.REL],
        ["<<", PREC.SHIFT],
        [">>", PREC.SHIFT],
        [">>>", PREC.SHIFT],
        ["+", PREC.ADD],
        ["-", PREC.ADD],
        ["*", PREC.MULT],
        ["/", PREC.MULT],
        ["%", PREC.MULT],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field("left", $.expression),
          operator,
          field("right", $.expression)
        ))
      )
    ),

    unary_expression: ($) => prec.left(PREC.UNARY, seq(
      choice("+", "-", "!", "~"),
      $.expression
    )),

    update_expression: ($) => prec.left(PREC.UNARY, choice(
      seq(choice("++", "--"), $.expression),
      seq($.expression, choice("++", "--"))
    )),

    ternary_expression: ($) => prec.right(PREC.TERNARY, seq(
      field("condition", $.expression),
      "?",
      field("consequence", $.expression),
      ":",
      field("alternative", $.expression)
    )),

    null_coalescing_expression: ($) => prec.right(PREC.NULL_COALESCE, seq(
      field("left", $.expression),
      "??",
      field("right", $.expression)
    )),

    argument_list: ($) => seq("(", optional(commaJoined1($.expression)), ")"),
    
    method_invocation: ($) => prec.left(PREC.OBJ_ACCESS, seq(
      optional(seq(field("object", $.expression), choice(".", "?."))),
      field("name", $.identifier),
      field("arguments", $.argument_list)
    )),

    field_access: ($) => prec.left(PREC.OBJ_ACCESS, seq(
      field("object", $.expression),
      choice(".", "?."),
      field("field", $.identifier)
    )),

    soql_expression: ($) => seq(
      "[",
      field("query", seq(ci("select"), optional($._soql_content))),
      "]"
    ),

    /**
     * Inline SOSL expression — the [FIND ... RETURNING ...] construct inside Apex.
     *
     * Shares the same balanced-bracket content rule as soql_expression.
     * The SOSL grammar (Step 12) is injected into this node via injections.scm.
     *
     * Example:
     *   [FIND 'SearchTerm' IN ALL FIELDS RETURNING Account(Name)]
     */
    sosl_expression: ($) => seq(
      "[",
      field("query", seq(ci("find"), optional($._sosl_content))),
      "]"
    ),

    /**
     * Balanced bracket content — used inside soql_expression and sosl_expression.
     *
     * Matches any sequence of:
     *   - Characters that are NOT square brackets
     *   - Nested bracket pairs (for subqueries like `(SELECT ... FROM ...)`)
     *     Note: parentheses, not brackets, are used for SOQL subqueries.
     *     Square brackets can appear in bind variable map access: :myMap['key']
     *
     * WHY NOT USE A SIMPLE REGEX?
     * A regex cannot handle balanced delimiters. The grammar rule recurses to
     * handle any depth of nesting correctly without a hard limit.
     */
    _soql_content: ($) => repeat1(
      choice(
        /[^\[\]]+/,                       // any non-bracket characters
        seq("[", optional($._soql_content), "]")  // nested bracket pair
      )
    ),

    _sosl_content: ($) => $._soql_content,

    /**
     * Primary expression — the simplest expressions.
     */
    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    // =========================================================================
    // LITERALS
    // =========================================================================

    string_literal: ($) => /'(\\[nNrRtTbBfFuU"'_%\\]|[^\\'])*'/,
    int: ($) => token(/[0-9]+(_[0-9]+)*/),
    expression_statement: ($) => seq(
      choice(
        $.assignment_expression,
        $.update_expression,
        $.method_invocation,
        $.new_expression
      ),
      ";"
    ),

    block: ($) => seq("{", repeat($.statement), "}"),

    /**
     * Local variable declaration — inside a method or block.
     *
     * Example:
     *   String name = 'hello';
     *   Integer count = 0;
     */
    local_variable_declaration: ($) => seq(
      optional($.modifiers),
      field("type", $._type),
      commaJoined1($.variable_declarator),
      ";"
    ),

    // =========================================================================
    // IDENTIFIERS
    // =========================================================================

    /**
     * Identifier — matches class names, field names, method names, etc.
     * Must start with a letter, can contain letters, digits, and underscores.
     */
    identifier: ($) => /[A-Za-z][A-Za-z\d_]*/,
